<resources>
    <string name="app_name">MobileAppAsm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string-array name="bankType">
        <item name="rhb">RHB</item>
        <item name="mb">Maybank</item>
        <item name="hsbc">HSBC</item>
        <item name="sc">Standared Chartered</item>
        <item name="cimb">CIMB</item>
        <item name="pb">Public Bank</item>
        <item name="ab">Am Bank</item>
        <item name="ocbc">OCBC</item>
        <item name="uob">United Overseas Bank</item>
        <item name="ct">Citibank</item>
        <item name="af">Affin Bank</item>
        <item name="bi">Bank Islam</item>
        <item name="hlb">Hong Leong Bank</item>
    </string-array>

    <string-array name="child_nations">
        <item>China</item>
        <item>India</item>
        <item>Japan</item>
        <item>Indonesia</item>
        <item>Vietnam</item>
        <item>Philippines</item>
        <item>Thailand</item>
        <item>Pakistan</item>
        <item>Bangladesh</item>
        <item>South Korea</item>
    </string-array>

    <!--    Admin-->
    <string name="name_label">Name </string>
    <string name="email_label">Email </string>
    <string name="contact_label">Contact Number </string>
    <string name="gender_label">Gender </string>
    <string name="age_label">Age </string>
    <string name="position_label">Position </string>
    <string name="company_label">Company </string>
    <string name="address_label">Address </string>
    <string name="edit_button_label">Edit Profile</string>
</resources>