<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--                <ImageView-->
<!--                    android:id="@+id/profile_image"-->
<!--                    android:layout_width="150dp"-->
<!--                    android:layout_height="150dp"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_marginTop="24dp"-->
<!--                    android:background="@drawable/circle_background"-->
<!--                    android:src="@drawable/ic_account_circle"/>-->

                <View
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_account_circle"/>

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:text="@string/name_label"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"
                    android:textStyle="bold"
                    android:text="@string/email_label"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/contact_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginLeft="30dp"
                    android:text="@string/contact_label"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/gender_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/gender_label"
                    android:layout_marginLeft="30dp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/age_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="30dp"
                    android:textStyle="bold"
                    android:text="@string/age_label"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/position_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/position_label"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"/>

                <View
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
<!--      navigation drawer-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/navigation_admin_drawer"/>

<!--        android:background="@{isDarkMode ? @color/dark_theme_color : @color/light_theme_color}"-->


    </androidx.drawerlayout.widget.DrawerLayout>

</layout>